# EDSiteProject

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.heroku.yml  docker-compose.yml  docker-entrypoint.sh  heroku.yml  live_data_td .py  live_database_updater.py  manage.py  pyproject.toml  redistest.py  requirements.txt  start_eddn_listener.py
.github/: README.md
EDSite/: apps.py  ed_data.py  forms.py  helpers.py  models.py  serializers.py  urls.py  views.py  views_api.py
EDSite/migrations/: 0001_initial.py  0002_remove_station_item_count.py  0002_rename_profit_carriermission_price.py  0003_alter_livelisting_station_tradedangerous_id.py  0003_rename_price_carriermission_worker_profit.py  0004_alter_carriermission_date_completed.py  0004_faction_government_state_superpower_localfaction_and_more.py  0005_alter_system_index_together.py  0005_carriermission_carrier_carriermission_carrier_name.py  0006_alter_livelisting_index_together.py  0006_rename_last_update_localfaction_modified.py  0007_faction_tradedangerous_id.py  0007_remove_livelisting_demand_level_and_more.py  0008_faction_home_system_station_population_and_more.py  0008_remove_historiclisting_demand_level_and_more.py  0009_livelisting_commodity_tradedangerous_id_and_more.py  0009_system_allegiance_system_government.py  0010_alter_faction_home_system_alter_system_allegiance_and_more.py  0010_remove_station_data_age_days_station_modified.py  0011_alter_historiclisting_station.py  0011_alter_station_population_alter_system_population.py  (+18 more)
EDSiteProject/: asgi.py  settings.py  urls.py  wsgi.py
(+34 files in other folders)
